--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet": "^1.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-leaflet": "^4.1.0",
     "react-phone-number-input": "^3.2.11",
     "react-router-dom": "^6.4.1",
